started configuring by adding partials

--- a/source/stylesheets/screen.css.sass
+++ b/source/stylesheets/screen.css.sass
@@ -3,6 +3,8 @@
 //
 
 @import "compass"
+@import "partials/variables"
+@import "partials/normalize"
 
 // HTML5 Boilerplate Styles
 // TODO: add appropriate h5bp styles now that we're not using the gem anymore
@@ -16,7 +18,7 @@
 
 // Your own styles go here.
 h1
-  color: #999
+  color: $colour8
   text-transform: uppercase
   line-height: 1em
 h2
