--- a/source/stylesheets/all.css.sass
+++ b/source/stylesheets/all.css.sass
@@ -11,29 +11,29 @@
 @import "partials/placeholders"
 @import "partials/layout"
 @import "partials/modules"
-// Susy Grid Systems - choose one to customize
+// Susy Grid Systems - choose one to customize or roll your own!
 // @import "grid/fixed"
-@import "grid/magic"
+// @import "grid/magic"
 // Font Awesome icons
 // @import "font-awesome"
 
 // Your own styles go here... I will be moving this all to partials as per SMACSS / Compass & Sass eBook
-h1
-  color: $colour9
-  text-transform: uppercase
-  line-height: 1em
-h2
-  line-height: 1.3em
-kbd
-  background-color: #f5f5f5
-  border: 1px solid #dedede
-  padding: 0px 3px 2px
-footer
-  margin-top: 3em
-  text-align: right
+//h1
+//  color: $colour9
+//  text-transform: uppercase
+//  line-height: 1em
+//h2
+//  line-height: 1.3em
+//kbd
+//  background-color: #f5f5f5
+//  border: 1px solid #dedede
+//  padding: 0px 3px 2px
+//footer
+//  margin-top: 3em
+//  text-align: right
 
-.container
+//.container
   // Force images to scale down to their container widths.
-  img
-    max-width: 100%
-    height: auto
+//  img
+//    max-width: 100%
+//    height: auto
