--- a/source/stylesheets/partials/_variables.sass
+++ b/source/stylesheets/partials/_variables.sass
@@ -9,3 +9,58 @@ $colour8: #7F00FF // Purple
 $colour9: #FF00FF // Magenta
 $colour10: #000 // Black
 $colour11: #fff // White
+
+$colour-brand: pink // Yep, pink!
+$blockquote-bg: #faebbe // Yellowy
+$colour-link: #3D518F // blue-dark
+
+// A simple theme switcher
+// ====================================================================
+
+$colour-theme: pink
+
+@if $colour-theme == pink
+	$colour-brand: pink
+@else if $colour-theme == orange
+	$colour-brand: #ff9900
+
+
+$theme-complement: complement($colour-theme)
+$theme-invert: invert($colour-theme)
+$theme-adjust: adjust-hue($colour-theme, 90deg)
+$theme-shade: shade($colour-theme, 20%)
+$theme-tint: tint($colour-theme, 20%)
+
+// Fonts
+$blockquote: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif
+
+// Mixin variables
+$defined-bs-type: border-box !default
+
+// Breakpoint variables
+// ====================================================================
+$XS: 18em // roughly speaking, around 288px wide with 16px body font
+$S: 30em // roughly speaking, around 480px wide with 16px body font
+$M: 43em // roughly speaking, around 688px wide with 16px body font
+$L: 57em // roughly speaking, around 912px wide with 16px body font
+
+// Default values for text-shadow mixin
+// ====================================================================
+
+$default-text-shadow-colour: darken($colour11,20%)
+$default-text-shadow-blur: 0px
+$default-text-shadow-v-offset: 4px
+$default-text-shadow-h-offset: 3px
+
+// Default values for box-shadow mixin
+// ====================================================================
+$default-box-shadow-colour: lighten($colour10, 50%)
+$default-box-shadow-h-offset: 1px
+$default-box-shadow-v-offset: 1px
+$default-box-shadow-blur: 2px
+$default-box-shadow-spread: false
+$default-box-shadow-inset: false
+
+// Default value for border-radius
+// ====================================================================
+$default-border-radius: 5px
